Refactor admin service implementation and fix constructor mismatches